Lifted versions.